...
    );
  }

  Widget _buildScreen(BuildContext context) {
    return Scaffold(
      key: AppKeys.historyScreen,
      appBar: AppBar(title: Text(widget.appId == null ? '游玩记录' : '游戏游玩记录')),
      body: Column(
        children: [
          FutureBuilder<PlaytimeHistory>(
            future: _data,
            builder: (context, snapshot) {
              if ((snapshot.connectionState != ConnectionState.done &&
...
